# teamreputation

./: Makefile.in  README.md  configure  configure.ac
examples/: edges.csv  null-50-13-100000-0.5-5.dot  users.csv
scripts/: convert_from_dot.py
src/: Makefile.am  Makefile.in  config.hpp  config.hpp.in  exceptions.hpp  graph.cpp  graph.hpp  team.cpp  team.hpp  teamgenerator.cpp  teamgenerator.hpp  teamrep.cpp  user.cpp  user.hpp
