# what flags you want to pass to the C compiler & linker
CPPFLAGS = -std=c++11 -ggdb -O0 -Werror
LDFLAGS =

# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
bin_PROGRAMS = teamrep
teamrep_SOURCES = config.hpp user.hpp user.cpp graph.cpp graph.hpp	\
		  teamrep.cpp
